# tramp

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
src/: error.rs  lib.rs  main.rs
src/config/: cascade.rs  mod.rs  parser.rs  types.rs
src/exec/: mod.rs  trampoline.rs
src/hooks/: executor.rs  mod.rs
src/rules/: matcher.rs  mod.rs  rewriter.rs
tests/: integration_test.rs
tests/fixtures/configs/: basic.tramp.toml
tests/fixtures/configs/nested/: child.tramp.toml  parent.tramp.toml
tests/fixtures/scripts/: test_intercept_hook.sh  test_post_hook.sh  test_pre_hook.sh
tools/: check-ready.sh  release-tag.sh
