[package]
name = "tramp-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for proxying commands with pre/post hooks and trampolines"
license = "Apache-2.0"
repository = "https://github.com/fbartho/tramp"
readme = "README.md"
keywords = ["rust", "cli", "hooks", "proxy", "trampoline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.17"

[[bin]]
name = "tramp"
path = "src/main.rs"
